--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "require": {
     "php": "^8.0",
     "ext-json": "*",
-    "illuminate/support": "^9.0 || ^10.0"
+    "illuminate/support": "^9.0 || ^10.0|| ^11.0"
   },
   "autoload": {
     "psr-4": {
