--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "larva/laravel-ip2region",
+  "name": "larvaPlus/laravel-ip2region",
   "description": "This is a ip2region.",
   "keywords": [ "laravel", "geoip", "ip2location", "ip2region" ],
   "type": "library",
